--- a/src/app/books/books.component.html
+++ b/src/app/books/books.component.html
@@ -1,6 +1,12 @@
 <h2>Reading books</h2>
-<button [disabled]="isShowing">show books</button>
-<ul>
+
+<button (click)="isShowing = !isShowing">
+  <ng-container *ngIf="!isShowing">show Books</ng-container>
+  <ng-container *ngIf="isShowing">Hide Books</ng-container>
+</button>
+<input type="text" ng-model="name3" />
+<p>{{ name3 }}</p>
+<ul *ngIf="isShowing">
   <li>
     <img [src]="src" [alt]="name" width="100" /> {{ name }} by
     {{ author }}
