--- a/src/app/books/book/book.component.html
+++ b/src/app/books/book/book.component.html
@@ -1,9 +1,28 @@
-<li>
-  <img [src]="book.image" [alt]="book.name" width="100" />
-  <p class="tilte">
-    {{ book.name | titlecase }} by {{ book.author | titlecase }}
-  </p>
-
-  <p class="currency">{{ book.price | currency: "INR" }}</p>
-  <button (click)="addToCart()">Add to Cart</button>
+<li class="flex border rounded-xl h-60">
+  <img
+    [src]="book.image"
+    [alt]="book.name"
+    width="100"
+    class="m-auto rounded-sm"
+  />
+  <div class="m-auto">
+    <p class="text-lg">
+      {{ book.name | titlecase }} by {{ book.author | titlecase }}
+    </p>
+    <p class="my-4">{{ book.price | currency: "INR" }}</p>
+    <button
+      class="bg-blue-400 rounded p-3"
+      *ngIf="!isInCart"
+      (click)="addToCart()"
+    >
+      Add to Cart
+    </button>
+    <button
+      class="bg-blue-400 rounded p-3"
+      *ngIf="isInCart"
+      (click)="removeFromCart()"
+    >
+      Remove from Cart
+    </button>
+  </div>
 </li>
