--- a/src/app/books/books.component.html
+++ b/src/app/books/books.component.html
@@ -1,13 +1,7 @@
-<h2>Reading books</h2>
+<h2>Story Books List!</h2>
 
-<button (click)="isShowing = !isShowing">
-  <ng-container *ngIf="!isShowing">show Books</ng-container>
-  <ng-container *ngIf="isShowing">Hide books</ng-container>
-</button>
-<input type="text" ng-model="name3" />
-<p>{{ name3 }}</p>
-<ul *ngIf="isShowing">
+<ul *ngIf="isShowing" class="flex flex-wrap justify-center">
   <ng-container *ngFor="let singleBook of books; let i = index">
-    <app-book [book]="singleBook"></app-book>
+    <app-book [book]="singleBook" class="w-1/2 p-5 text-center"> </app-book>
   </ng-container>
 </ul>
