--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,15 +1,7 @@
-<p>cart works!</p>
+<h1>Your Cart</h1>
 <div *ngIf="getCart().length > 0">
-  
-  
-  
-  <div *ngFor="let cart of getCart()">
-    <div>{{cart.name}}</div>
+  <div *ngFor="let book of getCart(); let i = index">
+    <p class="my-4 text-2xl">{{ i + 1 }}. {{ book.name }}</p>
   </div>
 </div>
-
-  
-
-  <div  *ngIf=="getCart().length==0">No  books in your cart </div>
-  
-  
+<div *ngIf="getCart().length == 0">No books in your cart</div>
