--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -51,7 +51,7 @@
         id="confirm_password"
         class="p-2 rounded w-full border text-sm"
         placeholder="Confirm Password"
-        [(ngModel)]="form.confirm_password"
+        [(ngModel)]="form.confirmPassword"
         name="confirm_password"
         #confirm_password="ngModel"
         required
@@ -73,8 +73,8 @@
         [disabled]="myForm.form.invalid"
         class="p-2 w-full bg-purple-700 text-white hover:bg-purple-900 rounded"
       >
-        <ng-container *ngIf="isLoading()"> Loading... </ng-container>
         <ng-container *ngIf="!isLoading()"> Submit </ng-container>
+        <ng-container *ngIf="isLoading()"> Loading... </ng-container>
       </button>
     </div>
   </form>
